--- a/style.css
+++ b/style.css
@@ -1,5 +1,93 @@
-* {
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
     margin: 0;
-    box-sizing: border-box;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    min-height: 100vh;
+}
+
+/* header */
+
+.header {
+    height: 72px;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-logo {
+    color: #E5E7EB;
+}
+
+.header-link {
+    list-style-type: none;
+    display: flex;
+    gap: 16px;
+}
+
+a {
+    color: #F9FAF8;
+    text-decoration: none;
+}
+
+.footer {
+    margin-top: auto;
+    display: flex;
+}
+
+/* content */
+
+.first-page {
+    height: 600px;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 80px;
+}
+
+
+.main-text {
+    color: #F9FAF8;
+}
+
+.secondary-text {
+    color: #E5E7EB;
+}
+
+
+.second-page {
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-heading {
+    padding: 24px;
+}
+
+.information {
+    display: flex;
+    gap: 24px;
+}
+
+.square {
+    height: 200px;
+    width: 200px;
+    border: solid black;
+}
+
+.square-text {
+    max-width: 200px;
+    text-align: center;
+}
+
+/* footer */
+
+.footer {
+    height: 72px;
+    background-color: #1F2937;
 }
