--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 /* header */
 
 .header {
-    height: 72px;
+    height: 100px;
     background-color: #1F2937;
     display: flex;
     justify-content: space-between;
@@ -39,6 +39,8 @@ a {
 
 /* content */
 
+/* first page */
+
 .first-page {
     height: 600px;
     background-color: #1F2937;
@@ -57,6 +59,7 @@ a {
     color: #E5E7EB;
 }
 
+/* second page */
 
 .second-page {
     height: 600px;
@@ -66,28 +69,110 @@ a {
 }
 
 .content-heading {
-    padding: 24px;
+    padding: 36px;
+    font-size: 36px;
 }
 
 .information {
     display: flex;
-    gap: 24px;
+    gap: 60px;
 }
 
 .square {
     height: 200px;
     width: 200px;
-    border: solid black;
+    border: solid #3882F6;
+    border-radius: 24px;
 }
 
 .square-text {
     max-width: 200px;
     text-align: center;
+    font-size: 21px;
+}
+
+/* third page */
+
+.third-page {
+    height: 600px;
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-container {
+    max-width: 820px;
+}
+
+.quote {
+    font-style: italic;
+    font-size: 36px;
+    font-weight: 100;
+    color: #1F2937;
+}
+
+.author {
+    font-weight: bold;
+    font-size: 24px;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 32px;
+}
+
+/* fourth page */
+
+.fourth-page {
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sign-up-container {
+    border-radius: 12px;
+    padding: 32px 80px 32px 80px;
+    background-color: #3882F6;
+    display: flex;
+    gap: 340px;
+    align-items: center;
+}
+
+
+.main-text-call, .secondary-text-call {
+    margin-left: 40px;
+}
+
+.main-text-call {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+.secondary-text-call {
+    color: #E5E7EB;
+}
+
+
+.second-sign-up {
+    background-color:#3882F6;
+    font-size: 18px;
+    width: 100px;
+    height: 36px;
+    margin-right: 40px;
+    border-radius: 8px;
+    border: 2px solid #F9FAF8;
+    color: #F9FAF8;
+    font-weight: bold;
 }
 
 /* footer */
 
 .footer {
-    height: 72px;
+    height: 100px;
     background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+    font-size: 18px;
 }
