--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     font-family: Roboto, sans-serif;
     min-height: 100vh;
+    box-sizing: border-box;
 }
 
 /* header */
@@ -15,16 +16,20 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 250px 0px 250px;
 }
 
 .header-logo {
     color: #E5E7EB;
+    font-size: 32px;
+    font-weight: bold;
 }
 
 .header-link {
     list-style-type: none;
     display: flex;
-    gap: 16px;
+    gap: 20px;
+    font-size: 20px;
 }
 
 a {
@@ -47,16 +52,45 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 80px;
 }
 
 
 .main-text {
     color: #F9FAF8;
+    font-size: 72px;
+    max-width: 800px;
 }
 
 .secondary-text {
     color: #E5E7EB;
+    font-size: 24px;
+    max-width: 620px;
+}
+
+.image-placeholder {
+    background-color: gray;
+    width: 600px;
+    height: 300px;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.first-sign-up {
+    background-color:#3882F6;
+    font-size: 20px;
+    width: 140px;
+    height: 42px;
+    margin-right: 40px;
+    border-radius: 8px;
+    border: 2px solid #3882F6;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.text-placeholder {
+    font-size: 20px;
 }
 
 /* second page */
@@ -155,9 +189,9 @@ a {
 
 .second-sign-up {
     background-color:#3882F6;
-    font-size: 18px;
-    width: 100px;
-    height: 36px;
+    font-size: 20px;
+    width: 140px;
+    height: 42px;
     margin-right: 40px;
     border-radius: 8px;
     border: 2px solid #F9FAF8;
